# url-shortener

./: Cargo.toml  README.md  dev.db
docs/: architecture.md  decisions.md
migrations/: 0001_init.sql  0002_add_metadata.sql
src/: lib.rs  main.rs
tests/: integration_test.rs
