[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
rand = "0.8"
time = "0.3"
qrcode = "0.14"
image = "0.25"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "macros", "uuid", "time"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[dev-dependencies]
tower = "0.5"
http-body-util = "0.1"